[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/classes/dynamic_text_label.gd" type="Script" id=1]
[ext_resource path="res://src/menus/game/game.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/open_sans/regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/open_sans/bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/fonts/open_sans/light.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/images/heart.png" type="Texture" id=6]
[ext_resource path="res://src/menus/game/lives_container.gd" type="Script" id=7]
[ext_resource path="res://src/menus/game/answers.gd" type="Script" id=8]
[ext_resource path="res://src/menus/game/database.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="Game" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="QuestionIndex" type="RichTextLabel" parent="."]
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.22
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[b][center]Question 4"
text = "Question 4"
scroll_active = false
script = ExtResource( 1 )
normal_font_size = 80
bold_font_size = 100

[node name="Question" type="RichTextLabel" parent="."]
anchor_left = 0.15
anchor_top = 0.25
anchor_right = 0.85
anchor_bottom = 0.6
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Who was the first man on the moon?"
text = "Who was the first man on the moon?"
script = ExtResource( 1 )
normal_font_size = 60
bold_font_size = 80

[node name="Answers" type="Control" parent="."]
anchor_left = 0.2
anchor_top = 0.55
anchor_right = 0.8
anchor_bottom = 0.9
script = ExtResource( 8 )

[node name="NextQuestionButton" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="RichTextLabel" parent="."]
custom_fonts/normal_font = SubResource( 3 )
script = ExtResource( 1 )
normal_font_size = 60

[node name="Lives" type="HBoxContainer" parent="."]
margin_right = 120.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="Lives"]
margin_right = 37.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Lives"]
margin_left = 41.0
margin_right = 78.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Lives"]
margin_left = 82.0
margin_right = 120.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="DataBase" type="Node" parent="."]
script = ExtResource( 9 )

[connection signal="pressed" from="NextQuestionButton" to="." method="set_new_question"]
